objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>AutoRABIT Record Type</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Free POC</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Paid POC</fullName>
        </values>
        <values>
            <fullName>PlayGround</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Scoping</fullName>
        </values>
        <values>
            <fullName>Trial Completed</fullName>
        </values>
        <values>
            <fullName>Trial Expired</fullName>
        </values>
        <values>
            <fullName>Trial Initiated</fullName>
        </values>
        <values>
            <fullName>Unresponsive</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>BPM Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>ROI document</fullName>
        </values>
        <values>
            <fullName>Unresponsive</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Consulting</fullName>
        <description>This record type defines Business Unit types for Consulting</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>ROI document</fullName>
        </values>
        <values>
            <fullName>Trial Expired</fullName>
        </values>
        <values>
            <fullName>Trial Initiated</fullName>
        </values>
        <values>
            <fullName>Unresponsive</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Address_Info__c</fullName>
        <label>Address Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_del__c</fullName>
        <formula>TODAY()  -   DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Copado</fullName>
                </value>
                <value>
                    <fullName>Flosum</fullName>
                </value>
                <value>
                    <fullName>Jitterbit</fullName>
                </value>
                <value>
                    <fullName>Odaseva</fullName>
                </value>
                <value>
                    <fullName>Gearset</fullName>
                </value>
                <value>
                    <fullName>AssureClick</fullName>
                </value>
                <value>
                    <fullName>Provar</fullName>
                </value>
                <value>
                    <fullName>Dream factory – Snapshot</fullName>
                </value>
                <value>
                    <fullName>Dream factory – Cascade &amp; others</fullName>
                </value>
                <value>
                    <fullName>Atlassian - Bamboo</fullName>
                </value>
                <value>
                    <fullName>Atlassian - Others</fullName>
                </value>
                <value>
                    <fullName>Jenkins</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_eligibile_for_Premier_support__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable if the Customer is eligible for Premier support.
If this is not enabled ,it means customer is availing standard support services.</inlineHelpText>
        <label>Is eligibile for Premier support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <label>Opportunity Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Competitors__c</fullName>
        <label>Other Competitors</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playground_Set__c</fullName>
        <label>Playground Set</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Playground Set 1</fullName>
                </value>
                <value>
                    <fullName>Playground Set 2</fullName>
                </value>
                <value>
                    <fullName>Playground Set 3</fullName>
                </value>
                <value>
                    <fullName>Playground Set 4</fullName>
                </value>
                <value>
                    <fullName>Playground Set 5</fullName>
                </value>
                <value>
                    <fullName>Playground Set 6</fullName>
                </value>
                <value>
                    <fullName>Playground Set 7</fullName>
                </value>
                <value>
                    <fullName>Playground Set 8</fullName>
                </value>
                <value>
                    <fullName>Playground Set 9</fullName>
                </value>
                <value>
                    <fullName>Playground Set 10</fullName>
                </value>
                <value>
                    <fullName>Playground Set 11</fullName>
                </value>
                <value>
                    <fullName>Playground Set 12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_SalesEngineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Sales Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Start_Date__c</fullName>
        <label>Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version_Control_Type__c</fullName>
        <label>Version Control Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Playground_Set__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BitBucket</fullName>
                    <default>true</default>
                    <label>BitBucket</label>
                </value>
                <value>
                    <fullName>GitHub</fullName>
                </value>
                <value>
                    <fullName>Perforce</fullName>
                </value>
                <value>
                    <fullName>SVN</fullName>
                </value>
                <value>
                    <fullName>TFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>BPM_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.BPM_Record_Type,Opportunity.Consulting_Record_Type,Opportunity.Migile_Record_Type</value>
        </filters>
        <label>BPM Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <group>BPM_Services_Group</group>
            <group>Consulting_Group</group>
            <role>AutoRABIT</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Won_View</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>Contact_Name__c</columns>
        <columns>Trial_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.AutoRABIT</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NEXT_STEP</field>
            <operation>notContain</operation>
            <value>Implementation Complete</value>
        </filters>
        <label>Closed Won_Imp_Status Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_AR_Current</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Age_del__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>Trial_End_Date__c</columns>
        <columns>Trial_Start_Date__c</columns>
        <columns>Contact_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Unresponsive</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.AutoRABIT</value>
        </filters>
        <label>Opportunities_AR_Current</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pre_Sales_ROW</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.AutoRABIT</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Brad</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>paul</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Scoping,Trial Initiated,Trial Expired,Trial Completed,PlayGround,Free POC</value>
        </filters>
        <label>Pre- Sales - ROW</label>
        <language>en_US</language>
        <sharedTo>
            <group>AutoRABIT_Sales_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pre_Sales_USA</fullName>
        <booleanFilter>(1 OR 4) AND 2 AND 3</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Trial_Start_Date__c</columns>
        <columns>Trial_End_Date__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Pre_SalesEngineer__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Scoping,PlayGround,Free POC,Paid POC,Trial Initiated,Trial Expired</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.AutoRABIT</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>notContain</operation>
            <value>navneeth</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Trial Completed,Proposal,Negotiation,ROI document</value>
        </filters>
        <label>Pre-Sales USA</label>
        <language>en_US</language>
        <sharedTo>
            <group>AutoRABIT_Sales_Group</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>AutoRABIT</fullName>
        <active>true</active>
        <businessProcess>AutoRABIT Record Type</businessProcess>
        <description>This is for opportunities related to AutoRABIT</description>
        <label>AutoRABIT</label>
    </recordTypes>
    <recordTypes>
        <fullName>BPM_Record_Type</fullName>
        <active>true</active>
        <businessProcess>BPM Process</businessProcess>
        <description>This is for opportunities related to Techsophy</description>
        <label>BPM Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consulting_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Consulting</businessProcess>
        <label>Consulting Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Migile_Record_Type</fullName>
        <active>true</active>
        <businessProcess>Consulting</businessProcess>
        <label>Migile Record Type</label>
    </recordTypes>
</CustomObject>